test/fails/bad_parsing/bad_function5.lgl
int f(int x float y) { //Forgot a comma
    return 0;
}

void main() {
    return;
}